--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <img src="https://i.postimg.cc/hGzQMfm1/1-2.jpg" alt="nullbrawl.jpg" style="max-width: 100%; height: auto;">
 </div> 
   
-<h2><a href="https://nullbrawlorg.netlify.app/">Null’s Brawl İndir: iPhone için En İyi Oyun Deneyimi</a></h2>
+<h2><a href="https://nullbrawlorg.netlify.app/">Нулс Бравл APK: Полное руководство по загрузке и игре</a></h2>
 <h2>Что такое Нулс Бравл?</h2>
 <p>Нулс Бравл - это частный сервер для игры Brawl Stars, который предлагает игрокам множество преимуществ:</p>
 <ul>
